--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p id="yellow">Paragraph-1</p>
+	<br>
+	<p id="red">Paragraph-2</p>
+	<br>
+	<p id="green">Paragraph-3</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
